# sglthing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sgl_base_structure.sql
.github/workflows/: c-cpp.yml
cmake/: mingw.cmake
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
resources/: config.cfg  config.ini  config_info.txt  config_private.ini  tile4.mtl  vcbubble.mtl
resources/gfxutils/shaders/: cloud.fs  sky.fs  sky.vs
resources/rdm2/: rdmguy.mtl  skybox.mtl  sun.mtl
resources/rdm2/shaders/: cloud.fs  cloud.vs  instance_cube.vs  instance_cube_light.vs  sky.fs  sky.vs  stencil.fs
resources/rdm2/weapon/: weapon1.mtl  weapon2.mtl  weapon3.mtl
resources/scripts/: _sglthing.lua  game.lua  game.s7  game.scm  game_lib.scm  gfx_utils.scm
resources/scripts/client/: client.scm
resources/scripts/server/: server.scm
resources/scripts/shared/: shared.scm
resources/shaders/: _game_screen.fs  blur.fs  blur2.fs  cloud.fs  cloud.vs  dbg.fs  dbg.vs  fragment.fs  fragment_simple.fs  normal.vs  particle.fs  particle.vs  quad.fs  quad.gs  rigged.vs  shadow_pass.fs  shadow_pass.vs  shared.glsl  sky.fs  ui.fs  ui.vs  ui_picture.fs
resources/test/: Thriller Part 2.dae  Thriller Part 2.fbx  test.mtl  test_guy.dae  test_guy.fbx  test_guy_bust.dae
resources/uiassets/shaders/: ui.fs  ui.vs  ui_font2.vs  ui_panel.fs  ui_picture.fs
resources/unuse/: tile3.mtl
resources/yaal/map/: 1.mtl  2.mtl  3.mtl  4.mtl
resources/yaal/maps/: introduction.map  prison.map  tmp.map
resources/yaal/models/: bomb.mtl  city.mtl  player.fbx  wget-log  yaalonline.mtl
resources/yittle/: yittleman.mtl
sgllauncher/: launcher.py
sglrdm2/: gamemode.c  gamemode.h  map.c  map.h  objective.c  objective.h  perlin.c  perlin.h  ray.c  ray.h  rdm2.c  rdm2.h  rdm_net.c  rdm_net.h  weapons.c  weapons.h
sglthing/: _sglthing.h.in  animator.c  animator.h  bone.c  bone.h  config.c  config.h  graphic.c  graphic.h  http.c  http.h  io.c  io.h  keyboard.c  keyboard.h  light.c  light.h  map.c  map.h  memory.c  memory.h  model.c  model.h  mus.c  mus.h  net.c  net.h  particles.c  particles.h  primitives.c  primitives.h  prof.c  prof.h  script.c  script.h  sglthing.c  sglthing.h  shader.c  shader.h  snd.c  (+8 more)
sglthing/lua/: l_functions.c  l_functions.h  l_vector.c  l_vector.h
sglthing/s7/: netbundle.c  netbundle.h  s7.c  script_functions.c  script_functions.h  script_networking.c  script_networking.h  transform.c  transform.h  vector.h
shaders/: cloud.fs  dbg.fs  dbg.vs  fragment.fs  normal.vs  ui.fs  ui.vs  ui_picture.fs
thesglthing/: thesglthing.c
yaal/: chat.c  chat.h  fx.c  fx.h  map.c  map.h  netmgr.c  netmgr.h  util.c  util.h  yaal.c  yaal.h
yittlepeople/: building.c  building.h  civ.h  guy.c  guy.h  yittlepeople.c  yittlepeople.h
